# terraform-llm

./: .gitattributes  .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
ai/: _dataset_implementation.md  _setup.md  setup.md
configs/: README.md  config.yaml
configs/experiment/: gpt-oss-120b-multiturn.yaml  qwen-3.5-4b-multiturn.yaml
dashboard/: README.md  index.html  package-lock.json  package.json  vite.config.ts
dashboard/src/: App.tsx  index.css  types.ts
dataset/apigw_lambda_s3_dynamodb/: apigw_lambda_s3_dynamodb.jsonl  cleanup.sh  setup.sh  validation.py
dataset/eventbridge_lambda_cron/: cleanup.sh  eventbridge_lambda_cron.jsonl  setup.sh  validation.py
dataset/kinesis_firehose_s3/: kinesis_firehose_s3.jsonl  validation.py
dataset/lambda_dynamodb_alias/: cleanup.sh  lambda_dynamodb_alias.jsonl  setup.sh  validation.py
dataset/route53_rds_split_dns/: route53_rds_split_dns.jsonl  validation.py
dataset/route53_weighted_rds_replicas/: route53_weighted_rds_replicas.jsonl  validation.py
dataset/s3_dynamodb_tf_state/: s3_dynamodb_tf_state.jsonl  validation.py
dataset/simple_lambda/: cleanup.sh  setup.sh  simple_lambda.jsonl  validation.py
dataset/simple_vpc/: simple_vpc.jsonl  validation.py
dataset/three_tier_vpc/: three_tier_vpc.jsonl  validation.py
dataset/vpc_db_subnet_group/: validation.py  vpc_db_subnet_group.jsonl
dataset/vpc_public_subnets/: validation.py  vpc_public_subnets.jsonl
output/: benchmark_results.json
scripts/: fetch_iac_eval.py  generate_datasets.py  top10_localstack.json
terraform_llm/: __init__.py  cli.py
(+438 files in other folders)
